JETcompiler/Tests/bad/bad011.myout
Incorrect return type. Expected "IntegerType and "BooleanType" was found, line 2
